# pyR2D2

./: .buildinfo  .buildinfo.bak  .gitignore  MANIFEST.in  R2D2.module.html  R2D2.package.html  R2D2.write.html  README.md  api_reference.html  artdif.html  boundary.html  code.html  environment.html  equation.html  est.py  file_size_evaluate.py  genindex.html  geometry.html  index.html  init.py  init_gspread.py  io.html  mov.py  mov2d.py  mov_high.py  mov_photo.py  mov_spherical.py  mov_util.py  notation.html  objects.inv  parameter.html  paraview.html  py-modindex.html  pyR2D2.module.html  pyR2D2.package.html  pyR2D2.write.html  pyproject.toml  pyr2d2.html  quick_start.html  r2d2_py.html  (+8 more)
R2D2/: R2D2_data.py  __init__.py  common.py  data.py  fortran_util.py  google.py  r2d2_data.py  read.py  resolution.py  sync.py  util.py
_images/: inheritance-49eff795a37580e478d42e30c87ecd239cc2f4b1.png.map  inheritance-9d6993ad2a730474073ac3af7434dd6d8f8688e1.png.map  inheritance-b8f82113d839af3fe23ff528fb58f40389e2fdf0.png.map  inheritance-e0d95e7e20726546c61716c30c336277d89e8680.png.map
_modules/: index.html
_sources/: api_reference.rst.txt  boundary.rst  boundary.rst.txt  environment.rst.txt  equation.rst.txt  index.rst.txt  io.rst  io.rst.txt  notation.rst  notation.rst.txt  parameter.rst  paraview.rst.txt  pyR2D2.package.rst.txt  pyR2D2.write.rst.txt  pyr2d2.rst.txt  scheme.rst.txt  sphinx.rst.txt  start.rst.txt
pyR2D2/cpp_util/: CMakeLists.txt  __init__.py  bindings.cpp  const.hpp  eos.cpp  eos.hpp  field_line.hpp  rte.hpp  view_array.hpp  yin_yang_convert.hpp
(+884 files in other folders)
